@@ -15,6 +15,8 @@
   by placing square brackets around the IP address to make it a valid
   domain-literal per RFC 2822.  Also fix a logging bug where the subject
   was logged twice instead of logging the subject and the message contents.
+- Performance enhancement for the Scheduled outages editing page. Bug 1340.
+  Thanks, MikeJ!
 
 1.2.3 to 1.2.4
 ----------------------------------------------------------------------
